# interlinked

./: .gitignore  ARCHITECTURE_REPLAN.md  TODO.md  pyproject.toml
docs/: todo.md
docs/design/: embedding-similarity.md
interlinked/: __init__.py  cli.py  mcp_server.py  models.py
interlinked/.interlinked/: embeddings.db
interlinked/analyzer/: __init__.py  dead_code.py  embeddings.py  graph.py  parser.py  similarity.py
interlinked/analyzer/treesitter/: __init__.py  adapter.py  registry.py  resolver.py  walker.py
interlinked/analyzer/treesitter/langs/: __init__.py  javascript_lang.py  python_lang.py
interlinked/commander/: __init__.py  llm.py  query.py  repl.py
interlinked/visualizer/: __init__.py  layouts.py  server.py
interlinked/visualizer/frontend/: index.html  package-lock.json  package.json  vite.config.ts
interlinked/visualizer/frontend/src/: App.tsx  index.css  theme.ts  types.ts
interlinked/visualizer/frontend/src/graph/: GraphCanvas.tsx  nodePrograms.ts
interlinked/visualizer/frontend/src/state/: graphStore.ts  sseClient.ts
test_project/: main.py  models.py  store.py
test_project/.interlinked/: embeddings.db
tests/: test_accuracy.py  test_query_completeness.py  test_watcher.py
tests/fixtures/: async_patterns.py  cross_module_calls.py  dead_code_traps.py  dynamic_dispatch.py  false_positive_edges.py  graph_mutation.py  inheritance.py  language_patterns.py  nested_async.py  shadowing.py  type_resolution.py
