[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interlinked-mapper"
version = "0.1.2"
description = "A Python program topology explorer — visualize the shape of your codebase"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]
keywords = ["ast", "code-analysis", "topology", "graph", "visualization", "mcp", "networkx"]
dependencies = [
    "networkx>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/austerecryptid/interlinked"
Repository = "https://github.com/austerecryptid/interlinked"

[project.scripts]
interlinked = "interlinked.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["interlinked*"]
